--- a/app/frontend/templates/dashboard.html
+++ b/app/frontend/templates/dashboard.html
@@ -5,6 +5,7 @@
   <title>TKDiscRipper Dashboard</title>
   <link rel="stylesheet" href="/static/style.css">
   <script src="https://unpkg.com/htmx.org@1.9.4"></script>
+  <link rel="icon" type="image/gif" href="/static/favicon.gif">
 </head>
 <body>
 
