--- a/app/frontend/templates/dashboard.html
+++ b/app/frontend/templates/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>TKDiscRipper Dashboard</title>
   <link rel="stylesheet" href="/static/style.css">
-  <script src="https://unpkg.com/htmx.org@1.9.4"></script>
+  <script src="/static/htmx.min.js"></script>
   <link rel="icon" type="image/gif" href="/static/favicon.gif">
 </head>
 <body>
